# Orac-Omniscient-Reactive-Algorithmic-Core

./: .dockerignore  .env.example  .gitignore  .gitmodules  API_GRAMMAR_FIX_SUMMARY.md  CACHING_STRATEGY.md  CLAUDE.md  CRITICAL_ISSUES.md  CRITICAL_PATH_IMPLEMENTATION.md  CURRENT_FOCUS.md  CURRENT_STATUS.md  DEVELOPMENT_LOG.md  DISPATCHER_GRAMMAR_OPTIMIZATION.md  DISPATCHER_OPTIMIZATION_PROMPT.md  Dockerfile  GBNF_TESTING_REPORT.md  GRAMMAR_CONSTRAINTS_SOLUTION.md  HOME_ASSISTANT_AUTO_DISCOVERY_IMPLEMENTATION.md  INTEGRATION.md  LEGACY_CODE_AUDIT.md  NEXT.md  OLD_instructions.md  README.md  SIMPLIFIED_GRAMMAR_GUI_DESIGN.md  SMART_HOME_GRAMMAR_README.md  SPRINTS_COMPLETION_SUMMARY.md  SPRINT_2_BACKEND_CONFIGURATION.md  SPRINT_2_IMPLEMENTATION_PROMPT.md  SPRINT_2_PROGRESS.md  SPRINT_2_TEST_SCRIPT.py  SPRINT_3_GRAMMAR_DISPATCHER_INTEGRATION.md  SPRINT_3_IMPLEMENTATION_PROMPT.md  SPRINT_4_IMPLEMENTATION_PROMPT.md  SPRINT_4_TOPIC_BACKEND_INTEGRATION.md  SPRINT_6_IMPLEMENTATION_PROMPT.md  TERMINAL_GRAMMAR_GUI_IMPLEMENTATION.md  TODO.md  ToDo.txt  analyze_entities.py  cleanup.MD  (+61 more)
config/: model_configs.yaml  prompt_default.txt  prompt_gpt2.txt  prompt_llama.txt  prompt_qwen3_1_7b.txt  validation.yaml
data/: favorites.json  grammars.yaml  model_configs.yaml  smart_home.gbnf  static_grammar.gbnf
docs/: AUDIT_2025-10-20.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_GRAMMAR_DISPATCHER.md  FileStructure.txt  HOME_ASSISTANT_INTEGRATION_PLAN.md  INTEGRATION_CURRENT_FOCUS.md  NEXT_SESSION_TOPIC_PIPELINE.md  New Feature Confidence.md  New Feature STT.txt  USER_GUIDE.md  sprint_4_prompt.md
(+190 files in other folders)
